[workspace]
resolver = "2"
members = [
    "tun-core",
    "tun-server",
    "tun-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["wisemrmusa"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# HTTP
axum = { version = "0.7", features = ["ws"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# TLS
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.5"
dashmap = "5.5"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Internal crates
tun-core = { path = "tun-core" }

